# deepspeech-stt

./: .gitignore  README.md  pyproject.toml
.github/worflows/: build.yml
notebooks/: Examples.ipynb
src/: deepspeech_stt.py  filters.py  processing.py  scoring.py
tests/: test_core.py  test_scoring.py
