[tool.poetry]
name = "deepspeech-tts"
version = "0.1.0"
description = "A slim Python interface for Mozilla's DeepSpeech TTS"
authors = ["crodriguez1a <crodriguez1a@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
deepspeech = "^0.7.4"
scipy = "^1.5.1"

[tool.poetry.dev-dependencies]
isort = "^5.0.9"
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"
autoflake = "^1.3.1"
pytest = "^5.4.3"
jupyter = "^1.0.0"
taskipy = "^1.2.1"

[tool.taskipy.tasks]
test = "python -m pytest"
clean = "flake8 . & black . & isort . & mypy ."

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
